--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li class="social-item"><a class="social-link text-light" href="https://twitter.com/Praveen_sr_"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="www.linkedin.com/in/praveen-kumar-sr"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://www.instagram.com/praveen_sr_/"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="https://github.com/praveensr157"><i class="ti-github" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://github.com/praveen-kumar-sr"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
@@ -84,7 +84,7 @@
                 <ul class="social-icons social-icons-lg justify-content-center justify-content-lg-start ml-lg-n2 mt-5">
                     <li class="social-icons-twitter"><a data-toggle="tooltip" href="https://twitter.com/Praveen_sr_" target="_blank" title="" data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
                     <li class="social-icons-instagram"><a data-toggle="tooltip" href="https://www.instagram.com/praveen_sr_/" target="_blank" title="" data-original-title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                    <li class="social-icons-github"><a data-toggle="tooltip" href="https://github.com/praveensr157" target="_blank" title="" data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
+                    <li class="social-icons-github"><a data-toggle="tooltip" href="https://github.com/praveen-kumar-sr" target="_blank" title="" data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
                     <li class="social-icons-linkedin"><a data-toggle="tooltip" href="www.linkedin.com/in/praveen-kumar-sr" target="_blank" title="" data-original-title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
@@ -262,7 +262,7 @@
                                 <div class="text-holder">
                                     <h6 class="title">Analyzing Indian Startups: Analyzed the most funded startup industries, location of startups with most funding and top investors of startups in India</h6>
                                     <p class="subtitle">EDA using Python</p>
-                                    <a href="https://github.com/praveensr157/Python-Projects-of-Mine/blob/main/Analyzing%20the%20Indian%20Startups.ipynb" class="btn-view-project">View Project</a>
+                                    <a href="https://github.com/praveen-kumar-sr/Python-Projects-of-Mine/blob/main/Analyzing%20the%20Indian%20Startups.ipynb" class="btn-view-project">View Project</a>
                                 </div>
                             </div> 
                         </div>
@@ -275,7 +275,7 @@
                                 <div class="text-holder">
                                     <h6 class="title">A Simple EMI Calculator</h6>
                                     <p class="subtitle">EDA using Python</p>
-                                    <a href="https://github.com/praveensr157/Python-Projects-of-Mine/blob/main/EMI_CALCULATOR.ipynb" class="btn-view-project">View Project</a>
+                                    <a href="https://github.com/praveen-kumar-sr/Python-Projects-of-Mine/blob/main/EMI_CALCULATOR.ipynb" class="btn-view-project">View Project</a>
                                 </div>
                             </div> 
                         </div>
@@ -288,7 +288,7 @@
                                 <div class="text-holder">
                                     <h6 class="title">Keyword Generator for Google Ad's Campaign</h6>
                                     <p class="subtitle">EDA using Python</p>
-                                    <a href="https://github.com/praveensr157/Python-Projects-of-Mine/blob/main/Keywords%20Generator%20for%20Google%20Ads.ipynb" class="btn-view-project">View Project</a>
+                                    <a href="https://github.com/praveen-kumar-sr/Python-Projects-of-Mine/blob/main/Keywords%20Generator%20for%20Google%20Ads.ipynb" class="btn-view-project">View Project</a>
                                 </div>
                             </div> 
                         </div>
@@ -301,7 +301,7 @@
                                 <div class="text-holder">
                                     <h6 class="title">Sentiment Analysis: Developing a sentiment analysis algorithm specifically designed for use in financial texts</h6>
                                     <p class="subtitle">EDA using Python</p>
-                                    <a href="https://github.com/praveensr157/Python-Projects-of-Mine/blob/main/Sentiment%20Analysis.py" class="btn-view-project">View Project</a>
+                                    <a href="https://github.com/praveen-kumar-sr/Python-Projects-of-Mine/blob/main/Sentiment%20Analysis.py" class="btn-view-project">View Project</a>
                                 </div>
                             </div> 
                         </div>
@@ -314,7 +314,7 @@
                             <div class="text-holder">
                               <h6 class="title">HR Analytics Employee Attrition Performance: KPI's and extracted important insights using HR Data</h6>
                               <p class="subtitle">Power BI</p>
-                              <a href="https://github.com/praveensr157/Power-BI---Tableau-Projects-of-mine/blob/main/HRAnalyticsEmployeeAttritionPerformance_PRAVEEN_KUMAR_S_R.pbix" class="btn-view-project">View Project</a>
+                              <a href="https://github.com/praveen-kumar-sr/Power-BI---Tableau-Projects-of-mine/blob/main/HRAnalyticsEmployeeAttritionPerformance_PRAVEEN_KUMAR_S_R.pbix" class="btn-view-project">View Project</a>
                             </div>
                           </div>   
                         </div>             
@@ -327,7 +327,7 @@
                             <div class="text-holder">
                               <h6 class="title">Food Forecasting Analysis: KPI's, Weekly Forecast and insights about a meal delivery company</h6>
                               <p class="subtitle">Power BI</p>
-                              <a href="https://github.com/praveensr157/Power-BI---Tableau-Projects-of-mine/blob/main/FOOD_FORECASTING_ANALYSIS_PRAVEEN_KUMAR_S_R.pbix" class="btn-view-project">View Project</a>
+                              <a href="https://github.com/praveen-kumar-sr/Power-BI---Tableau-Projects-of-mine/blob/main/FOOD_FORECASTING_ANALYSIS_PRAVEEN_KUMAR_S_R.pbix" class="btn-view-project">View Project</a>
                             </div>
                           </div>   
                         </div>             
@@ -340,7 +340,7 @@
                             <div class="text-holder">
                               <h6 class="title">Empowering Online Retail Store with Effective Insights using Tableau</h6>
                               <p class="subtitle">Tableau</p>
-                              <a href="https://github.com/praveensr157/Power-BI---Tableau-Projects-of-mine/blob/main/Online_store_tata.twbx" class="btn-view-project">View Project</a>
+                              <a href="https://github.com/praveen-kumar-sr/Power-BI---Tableau-Projects-of-mine/blob/main/Online_store_tata.twbx" class="btn-view-project">View Project</a>
                             </div>
                           </div>   
                         </div>             
@@ -354,7 +354,7 @@
                                 <div class="text-holder">
                                     <h6 class="title">Library Management System using SQL</h6>
                                     <p class="subtitle">SQL</p>
-                                    <a href="https://github.com/praveensr157/SQL-Project-Library-Management-System-" class="btn-view-project">View Project</a>
+                                    <a href="https://github.com/praveen-kumar-sr/SQL-Project-Library-Management-System-" class="btn-view-project">View Project</a>
                                 </div>
                             </div>
                         </div>                                                       
@@ -432,7 +432,7 @@
                             <li class="social-item"><a class="social-link" href="https://twitter.com/Praveen_sr_"><i class="ti-twitter" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link" href="www.linkedin.com/in/praveen-kumar-sr"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link" href="https://www.instagram.com/praveen_sr_/"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link" href="https://github.com/praveensr157"><i class="ti-github" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link" href="https://github.com/praveen-kumar-sr"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul>  
                     </div>
                 </div>
