--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img src="imgs/avatar.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">PRAVEEN KUMAR S R</h5>
-                        <div class="brand-subtitle">Data Enthusiast</div>
+                        <div class="brand-subtitle">Data Analyst</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -68,8 +68,8 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
-                <h5 class="mb-3">A Passionate Data Scientist Located In Our Lovely Earth</h5>
-                <p class="mt-20">An avid learner on the path to integrate my passion for Data, seeking to leverage my analytical skills and programming knowledge to develop innovative solutions that drive business growth and improve decision-making processes.</p>
+                <h5 class="mb-3">A Passionate Data Analyst Located In Our Lovely Earth</h5>
+                <p class="mt-20">Data Analyst with 3+ years of experience in data analysis, data validation and automation. An Avid learner on the path to integrate my passion for Data, seeking to leverage my analytical skills and programming knowledge to develop innovative solutions that drives business growth and improve decision-making processes.</p>
                 <a href="PRAVEEN_KUMAR_S_R.pdf" download><button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button></a>
             </div>
             <div class="col-lg-4 about-card">
