--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2022 - Present</h6>
+                            <h6 class="title text-danger">2022 - 2024</h6>
                             <p style="font-size: 20px; font-weight: bold;">Data Science Immersive Bootcamp</p>
                             <P class="subtitle">This Bootcamp is certified by Analytics Vidhya. Analytics Vidhya is the largest data science knowledge portal and community in India. </P>
                             <P class="subtitle">Skillset covered: Exploratory Data Analysis, Statistics, Machine Learning, Deep Learning, Neural Networks, AWS.</P>
