--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <ul class="social-icons pt-3">
                 <li class="social-item"><a class="social-link text-light" href="https://twitter.com/Praveen_sr_"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="www.linkedin.com/in/praveen-kumar-sr"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://linkedin.com/in/praveen-kumar-sr/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://www.instagram.com/praveen_sr_/"><i class="ti-instagram" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://github.com/praveen-kumar-sr"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
@@ -85,7 +85,7 @@
                     <li class="social-icons-twitter"><a data-toggle="tooltip" href="https://twitter.com/Praveen_sr_" target="_blank" title="" data-original-title="Twitter"><i class="fab fa-twitter"></i></a></li>
                     <li class="social-icons-instagram"><a data-toggle="tooltip" href="https://www.instagram.com/praveen_sr_/" target="_blank" title="" data-original-title="Instagram"><i class="fab fa-instagram"></i></a></li>
                     <li class="social-icons-github"><a data-toggle="tooltip" href="https://github.com/praveen-kumar-sr" target="_blank" title="" data-original-title="GitHub"><i class="fab fa-github"></i></a></li>
-                    <li class="social-icons-linkedin"><a data-toggle="tooltip" href="www.linkedin.com/in/praveen-kumar-sr" target="_blank" title="" data-original-title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li class="social-icons-linkedin"><a data-toggle="tooltip" href="https://linkedin.com/in/praveen-kumar-sr/" target="_blank" title="" data-original-title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
             <div class="col-lg-4 about-card">
@@ -430,7 +430,7 @@
                         </div>
                         <ul class="social-icons pt-3">
                             <li class="social-item"><a class="social-link" href="https://twitter.com/Praveen_sr_"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link" href="www.linkedin.com/in/praveen-kumar-sr"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link" href="https://linkedin.com/in/praveen-kumar-sr/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link" href="https://www.instagram.com/praveen_sr_/"><i class="ti-instagram" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link" href="https://github.com/praveen-kumar-sr"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul>  
