--- a/index.html
+++ b/index.html
@@ -133,12 +133,20 @@
                             </div>
                         </div>
                         <div class="card-body">
+			
                             <h6 class="title text-danger">Cognizant</h6>
-                            <p style="font-size: 20px; font-weight: bold;">Test Analyst (2021 - Present)</p>
-                            <P class="subtitle">As a Test Analyst, my primary responsibility includes creating and validating test data between databases such as AWS Athena and Snowflake. Also performing schema validation, ensuring data accuracy, and identifying discrepancies.</P>
-                            <P class="subtitle">I also have experience in Python automation and have developed a tool named MedioV, which compares DDL check between tables of different databases. This tool helped to streamline the validation process and ensured consistency across different databases.</P>
-                            <P class="subtitle">Through my expertise in data management and programming, I contribute to improving the overall quality and efficiency of testing processes.</P>
-                            <p style="font-size: 13px; font-weight: bold;">Tools involved: Python, Teradata, AWS Athena, Snowflake, Mainframe</p>
+			    <p style="font-size: 20px; font-weight: bold;">Senior Test Analyst (October 2023 - Present)</p>
+                            <P class="subtitle">Data Analysis & Validation Expertise: Applied strong analytical skills and performed functionality checks to validate data across cloud and on-prem databases, including Snowflake and AWS Athena, ensuring data integrity during migrations.</P>
+                            <P class="subtitle">Automation Architect: Designed and implemented a comprehensive automation framework integrated with CI/CD pipeline, collaborating closely with the DevOps team to optimize end to end ETL testing process, significantly improving efficiency and test coverage.</P>
+                            <P class="subtitle">NoSQL Proficiency: Demonstrated expertise in validating NoSQL database (MongoDB), developed Python-based JSON comparison tool to ensure data consistency. Proficient in schema-less data modeling and query optimization within the NoSQL environment.</P>
+                            <P class="subtitle">Data-Driven Test Automation: Developed a Python-based tool incorporating modules such as PyQt5 for the interface, Pandas and PySpark for data processing to monitor data loads in databases and automatically trigger test executions and notifying end-users upon completion</P>
+                            <P class="subtitle">GenAI Integration: Utilized Generative AI technologies to continually enhance data analysis methodologies and automation strategies, staying at the forefront of technological advancements.</P>
+			    <p style="font-size: 20px; font-weight: bold;">Test Analyst (September 2021 - October 2023)</p>
+                            <P class="subtitle">SQL & ETL Analysis: Developed complex SQL queries to analyze ETL processes and database functionalities, primarily working with Teradata, and provided critical insights into data quality and database consistency.</P>
+                            <P class="subtitle">Cloud Migration & Data Validation: Played a pivotal role in the migration of databases from on-premises to cloud platforms, conducting thorough data analysis and validation to ensure smooth transitions and data fidelity.</P>
+                            <P class="subtitle">Data Analysis & Automation Tools Development: Led the development of automation tools using Python and Jupyter Notebook, focusing on enhancing database validation processes.</P>
+                            <P class="subtitle">Process Optimization: Demonstrated expertise in identifying process inefficiencies and developing automated solutions to enhance data validation and testing accuracy. Key projects included the automation of DDL validation between on-prem and cloud databases, resulting in significant time savings and improved data accuracy.</P>
+                            <p style="font-size: 13px; font-weight: bold;">Tools involved: <a href="https://img.shields.io/badge/Code-Python-brightgreen?style=flat&logo=python&logoColor=white&color=4AB197"> </p>
                             <hr>
                         </div>
                     </div>
