--- a/index.html
+++ b/index.html
@@ -136,17 +136,15 @@
 			
                             <h6 class="title text-danger">Cognizant</h6>
 			    <p style="font-size: 20px; font-weight: bold;">Senior Test Analyst (October 2023 - Present)</p>
-                            <P class="subtitle">Data Analysis & Validation Expertise: Applied strong analytical skills and performed functionality checks to validate data across cloud and on-prem databases, including Snowflake and AWS Athena, ensuring data integrity during migrations.</P>
-                            <P class="subtitle">Automation Architect: Designed and implemented a comprehensive automation framework integrated with CI/CD pipeline, collaborating closely with the DevOps team to optimize end to end ETL testing process, significantly improving efficiency and test coverage.</P>
-                            <P class="subtitle">NoSQL Proficiency: Demonstrated expertise in validating NoSQL database (MongoDB), developed Python-based JSON comparison tool to ensure data consistency. Proficient in schema-less data modeling and query optimization within the NoSQL environment.</P>
-                            <P class="subtitle">Data-Driven Test Automation: Developed a Python-based tool incorporating modules such as PyQt5 for the interface, Pandas and PySpark for data processing to monitor data loads in databases and automatically trigger test executions and notifying end-users upon completion</P>
-                            <P class="subtitle">GenAI Integration: Utilized Generative AI technologies to continually enhance data analysis methodologies and automation strategies, staying at the forefront of technological advancements.</P>
+			    <p class="subtitle">• Applied strong analytical skills to validate data across cloud and on-prem databases, including Snowflake and AWS Athena.</p>
+			    <p class="subtitle">• Designed an automation framework integrated with CI/CD, optimizing ETL testing efficiency and coverage.</p>
+			    <p class="subtitle">• Demonstrated proficiency in NoSQL (MongoDB) and integrated GenAI to advance data analysis and automation strategies.</p>
 			    <p style="font-size: 20px; font-weight: bold;">Test Analyst (September 2021 - October 2023)</p>
-                            <P class="subtitle">SQL & ETL Analysis: Developed complex SQL queries to analyze ETL processes and database functionalities, primarily working with Teradata, and provided critical insights into data quality and database consistency.</P>
-                            <P class="subtitle">Cloud Migration & Data Validation: Played a pivotal role in the migration of databases from on-premises to cloud platforms, conducting thorough data analysis and validation to ensure smooth transitions and data fidelity.</P>
-                            <P class="subtitle">Data Analysis & Automation Tools Development: Led the development of automation tools using Python and Jupyter Notebook, focusing on enhancing database validation processes.</P>
-                            <P class="subtitle">Process Optimization: Demonstrated expertise in identifying process inefficiencies and developing automated solutions to enhance data validation and testing accuracy. Key projects included the automation of DDL validation between on-prem and cloud databases, resulting in significant time savings and improved data accuracy.</P>
-                            <p style="font-size: 13px; font-weight: bold;">Tools involved: <a href="https://img.shields.io/badge/Code-Python-brightgreen?style=flat&logo=python&logoColor=white&color=4AB197"> </p>
+                            <p class="subtitle">• Developed complex SQL queries to analyze ETL processes, focusing on Teradata, and provided critical insights into data quality.</p>
+			    <p class="subtitle">• Played a key role in cloud migration, ensuring smooth database transitions through thorough data analysis and validation.</p>
+			    <p class="subtitle">• Led the development of Python-based automation tools in Jupyter Notebook to enhance database validation.</p>
+			    <p class="subtitle">• Identified process inefficiencies and automated DDL validation between on-prem and cloud databases, saving time and improving accuracy.</p>
+			    <p style="font-size: 13px; font-weight: bold;">Tools involved:  </p>
                             <hr>
                         </div>
                     </div>
