--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                              <hr>
                              <h6 class="title text-danger">September 2023</h6>
                              <p style="font-size: 20px; font-weight: bold;">AWS Certified Cloud Practitioner</p>
-                             <P class="subtitle">Amazon Web Services</P>
+                             <P class="subtitle">Certificate Provider: Amazon Web Services</P>
                              <P class="subtitle">Credentials: </P>
                          </div>
                      </div>
