--- a/index.html
+++ b/index.html
@@ -175,13 +175,11 @@
                          <div class="card-body">
                              <h6 class="title text-danger">November 2022 - July 2024</h6>
                              <p style="font-size: 20px; font-weight: bold;">Data Science Immersive Bootcamp</p>
-                             <P class="subtitle">Certificate Provider: Analytics Vidhya</P>
-                             <P class="subtitle">Credentials: </P>
+                             <p class="subtitle"><a href="https://www.credential.net/c03fdb93-f495-4898-b88e-7b40014a2670#gs.cvr32t" target="_blank">View Credentials</a></p>
                              <hr>
                              <h6 class="title text-danger">September 2023</h6>
                              <p style="font-size: 20px; font-weight: bold;">AWS Certified Cloud Practitioner</p>
-                             <P class="subtitle">Certificate Provider: Amazon Web Services</P>
-                             <P class="subtitle">Credentials: </P>
+                             <p class="subtitle"><a href="https://www.credly.com/badges/0f60b4a3-f595-4a72-81a6-bca59e6d3225/" target="_blank">View Credentials</a></p>
                          </div>
                      </div>
                 </div>
