--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Hey there! check out my Portfolio">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
+    <meta name="description" content="PRAVEEN's Portfolio">
     <meta name="author" content="">
-    <title>Praveen S R</title>
+    <title>PRAVEEN KUMAR S R</title>
     <!-- font icons -->
     <link rel="stylesheet" href="vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + main styles -->
@@ -45,7 +46,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="imgs/avatar.png" alt="" class="brand-img">
+                    <img src="imgs/avatar.png" alt="" height=auto class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">PRAVEEN KUMAR S R</h5>
                         <div class="brand-subtitle">Data Analyst</div>
@@ -110,8 +111,7 @@
                     <div class="col-10 ml-auto mr-3">
                         <h6>Data Warehousing and ETL</h6>
                         <p class="subtitle"> Informatica Powercenter, Talend, Teradata SQL, AWS Athena, Snowflake SQL, MongoDB and Mainframe</p>
-                        <hr>
-                    </div>
+                       </div>
                 </div>
             </div>
         </div>
@@ -401,25 +401,6 @@
         <div id="map" class="map"></div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
-                    <div class="contact-form-card">
-                        <h4 class="contact-title">Send a message</h4>
-                        <form action="send-email.php" method="POST">
-                            <div class="form-group">
-                                <input name="name" class="form-control" type="text" placeholder="Name *" required>
-                            </div>
-                            <div class="form-group">
-                                <input name="email" class="form-control" type="email" placeholder="Email *" required>
-                            </div>
-                            <div class="form-group">
-                                <textarea name="message" class="form-control" placeholder="Message *" rows="7" required></textarea>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary">Send Message</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
                 <div class="col-lg-4">
                     <div class="contact-info-card">
                         <h4 class="contact-title">Get in touch</h4>
